--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-gh-pages",
+  "name": "derekgch.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://derekgch.github.io/react-gh-pages",
+  "homepage": "http://derekgch.github.io/",
   "dependencies": {
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
