--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "derekgch.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://derekgch.github.io/",
+  "homepage": "http://derekgch.github.io/derekgch.github.io",
   "dependencies": {
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
